--- a/0x03-queuing_system_in_js/package.json
+++ b/0x03-queuing_system_in_js/package.json
@@ -14,7 +14,7 @@
     "dependencies": {
         "chai-http": "^4.3.0",
         "express": "^4.17.1",
-        "redis": "^4.7.0"
+        "redis": "^3.1.2"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.0",
@@ -24,18 +24,11 @@
         "@babel/register": "^7.8.0",
         "@eslint/js": "^9.11.1",
         "chai": "^4.2.0",
-        "eslint-config-airbnb-base": "^14.0.0",
-        "eslint-config-standard": "^17.1.0",
-        "eslint-plugin-import": "^2.30.0",
-        "eslint-plugin-jest": "^28.8.3",
-        "eslint-plugin-n": "^16.6.2",
-        "eslint-plugin-promise": "^6.6.0",
-        "eslint-plugin-react": "^7.36.1",
+        "eslint": "^9.11.1",
         "globals": "^15.9.0",
         "mocha": "^10.7.3",
         "nodemon": "^2.0.2",
         "request": "^2.88.0",
-        "sinon": "^7.5.0",
-        "typescript-eslint": "^8.7.0"
+        "sinon": "^7.5.0"
     }
 }
