--- a/0x03-queuing_system_in_js/package.json
+++ b/0x03-queuing_system_in_js/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "chai-http": "^4.3.0",
         "express": "^4.17.1",
+        "kue": "^0.11.6",
         "redis": "^3.1.2"
     },
     "devDependencies": {
